# codepusher-blueprints-aws

./: CHANGELOG.md
github/chart/: metadata.yaml
github/chart/template/argocd/: applicationset.yaml
github/golang/golang-fiber/: metadata.yaml
github/golang/golang-fiber/template/: Dockerfile  go.mod  sonar-project.properties
github/nodejs/node-express/: metadata.yaml
github/python/python-fastapi/: metadata.yaml
github/python/python-fastapi/template/: .gitignore  Dockerfile  README.md  pyproject.toml
github/python/python-fastapi/template/.github/workflows/: pipeline.yaml
github/python/python-fastapi/template/app/: main.py
github/python/python-fastapi/template/app/api/endpoints/: example.py
github/python/python-fastapi/template/app/config/: settings.py
github/python/python-fastapi/template/app/core/: config.py  global_enums.py  logging.py
github/python/python-fastapi/template/app/modules/chat/: chat_router.py
github/python/python-fastapi/template/app/modules/chat/dtos/: send_message_dto.py
github/python/python-fastapi/template/app/modules/chat/services/: send_message_service.py
github/python/python-fastapi/template/app/schemas/: example.py
github/python/python-fastapi/template/app/services/: example_service.py
github/python/python-fastapi/template/codepusher/: catalog-info.yaml  service-catalog.yaml
github/python/python-fastapi/template/tests/: test_example.py
terraform/s3-bucket/: metadata.yaml
terraform/s3-bucket/module/: main.tf  outputs.tf  variables.tf
terraform/s3-bucket/template/: backend.tf  main.tf  outputs.tf
(+17 files in other folders)
