[tool.poetry]
name = "fastapi-template"
version = "0.1.0"
description = "A template for FastAPI projects"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.100.0"
pydantic = "^2.0"

[tool.poetry.dev-dependencies]
pytest     = "^7.0"
pytest-cov = "^4.0"